# qforte

./: CMakeLists.txt  CMakeLists_new.txt  CMakeLists_nick.txt  CMakeLists_old.txt  CMakeLists_thrust.txt  CMakeT1000.txt  README.md  findstuff.py  from_history.yml  nick.vars  plot_script.py  psi.54361.clean  qforte-install.sh  setup.py
Tutorials/: 5-Running-jobs-hubbardmodel.ipynb
cmake/: PythonStubs.cmake
docs/: gpu_acceleration.md
sandbox/benchmarking/: bmk_apply_1bdy_spat_v1.py  bmk_apply_hbrd1.py
sandbox/cis/: cis_test_v1.py  cis_test_v2.py  p4_cis.py
sandbox/davidson/: josh_goings_dav.py  qdavidson_testing.py
sandbox/df_ham/: test_app_df_ham_v2.py  test_df_evolution_v2.py  test_df_pool_evolution_v1.py  test_df_pool_evolution_v2.py  test_df_pool_evolution_v3.py  test_df_pool_individ_evo_v1.py  test_df_pool_individ_evo_v2.py  test_df_pool_individ_evo_v3.py  test_df_pool_it_evolution_v4.py
sandbox/df_qite/: test_num_op_evo_v1.py
sandbox/fci_computer/: benchmark_apply_spin_1bdy.py  compare_computers.py  qc_print_helper.py  test_apply_spin_1bdy_v1 copy.py  test_set_random_state.py
sandbox/fci_computer/applied_evolution/: test_evolv_hn_opt_order_v1.py  test_evolv_hn_opt_order_v2.py
sandbox/fci_computer/applied_evolution_v2/: test_evolv_2H_v3.py
sandbox/fci_computer_gpu/: test_apply_evolution.py  test_apply_individual_v1.py  test_apply_individual_v2.py  test_apply_individual_v3.py  test_apply_individual_v4.py  test_apply_individual_v5.py  test_apply_thrust_compare.py  test_new_fci_computer_class.py  test_new_fci_computer_class_debug.py  test_trotter_v1.py
sandbox/fci_computer_thrust/: transfer_struct.py
sandbox/fci_computer_thrust/applied_evolution/: test_ham_evo_accuracy.py  test_ham_evo_real.py  test_ham_evolution.py  test_ham_evolution_v2.py
sandbox/fci_graph_thrust/: test_fci_graph_thrust_v1.py
sandbox/fqe_api/: test_advanced_api_v1.py  test_basic_api_v1.py  test_ducc_pqe_v1.py  test_ducc_vqe_v1.py  test_srqk_v1.py
sandbox/fsurp_2024/: fock_vs_fci_ham_app.py  pqe_foc_vs_fci.py  timings.ipynb
sandbox/gpu_timings/: test_gpu_v1.py  timing_script.py  timing_script_v2.py  timings.ipynb
sandbox/gpu_timings/outputs/: ch4_hf.txt  full_data.txt  h10_hf.txt  h12_hf.txt  h2_hf.txt  h4_hf.txt  h6_hf.txt  h8_hf.txt  specific_data.txt
sandbox/localizer/: test_evolv_hn_localizer_v1.py
sandbox/power_method/: test_v1.py  test_v2.py  test_v3.py
sandbox/ppqe/: test_ppqe_v1.py  test_ppqe_v2.py  test_ppqe_v3.py
sandbox/ppqe_data/time_step_n2/: ppqe_time_step_v1.py
sandbox/pqe_fci_comp/: test_spqe_v1.py  test_v2.py  test_v4.py
sandbox/pyscf_adapter/: multiple_roots_test.py  test_v1.py  test_v2.py  test_v3.py  test_v4.py
sandbox/pyscf_hubbard/: test_build_hubbard_v1.py
sandbox/qite/: ref_out_v1.txt  ref_out_v2.txt  test_cnot_estimation.py  test_count_pauli.py  test_db_conv.py  test_dfqite_v1.py  test_excited_state_gen.py  test_folded_spectrum_QITE.py  test_qite_FCIComputer.py  test_qite_cis_fs_v1.py  test_qite_cis_fs_v2.py  test_qite_cis_v1.py  test_qite_diis_v1.py  test_qite_diis_v2.py  test_real_fs.py  test_sqite_cis_fs_v1.py  test_sqite_cis_fs_v2.py  test_sqite_cis_fs_v3.py  test_sqite_df_h6_v1.py  test_sqite_ene.py  test_sqite_ene_v2.py  test_threaded_rosalind.py
sandbox/sqop_pool/: test_app_df_ham_v1.py  test_df_pool_v1.py
sandbox/srqk_fci_comp/: test_v5_inplace_evo_alg.py
sandbox/tensor_gpu/: shuttle_v1.py  shuttle_v2.py
sandbox/thrust_test/: CMakeLists.txt  CMakeLists_py.txt  README.md  apply_sqop_test.py  build_and_run.sh  build_python_ext.sh  check_cuda.sh  compare_thrust_cuda.py  diagnose_cuda.sh  fci_test.py  minimal_test.py  run_thrust_test.sh  setup.py  simple_test.py  sqoptest.py  test.py  test_tensor_gpu_thrust.py  test_thrust_addition.py  test_thrust_py.py  thrust_test.cu  thrust_test.py  thrust_test_py.cu
sandbox/vqe_fci_comp/: test_fci_adaptvqe_ducc_v1.py  test_fci_vqe_hva_v1.py  test_fci_vqe_kpucc_v1.py  test_v1.py
scripts/: class_signatures.py  generate_advanced_stubs.py  generate_complete_pyi.py  generate_pyi.py  verify_pyi.py
src/qforte/: __init__.py  bindings.cc  blas_math.cc  blas_math.h  computer.cc  computer.h  device_link_stub.cu  df_hamiltonian.cc  df_hamiltonian.h  fci_computer.cc  fci_computer.cu  fci_computer.cuh  fci_computer.h  fci_computer_gpu.cc  fci_computer_gpu.cu  fci_computer_gpu.cuh  fci_computer_gpu.h  fci_computer_gpu_kernels.cu  fci_computer_gpu_kernels.cuh  fci_computer_thrust.cu  fci_computer_thrust.h  fci_graph.cc  fci_graph.h  fci_graph_gpu.cc  fci_graph_gpu.cu  fci_graph_gpu.cuh  fci_graph_gpu.h  fci_graph_thrust.cu  fci_graph_thrust.h  fci_graph_thrust_kernels.cu  fci_graph_thrust_kernels.cuh  fermion_computer.cc  fermion_computer.h  qforte.pyi  qubit_operator.cc  qubit_operator.h  sq_op_pool.cc  sq_op_pool.h  sq_op_pool_gpu.cu  sq_op_pool_gpu.h  (+15 more)
src/qforte/abc/: algorithm.py  ansatz.py  uccpqeabc.py  uccvqeabc.py
src/qforte/adapters/: model_adapters.py  molecule_adapters.py
src/qforte/fqe_api/: __init__.py  fqe_computer.py
src/qforte/helper/: __init__.py  df_ham_helper.py  orb_transforms.py  printing.py
src/qforte/hva/: __init__.py  hvavqe.py
src/qforte/ite/: __init__.py  dfqite.py  qite.py  qite_old.py
src/qforte/maths/: optimizer.py
src/qforte/qkd/: __init__.py  cis.py  srcd.py  srck.py  srqd.py  srqk.py  troubleshoot_srqd.py
src/qforte/system/: molecular_info.py  system_factory.py
src/qforte/ucc/: __init__.py  s3pqe.py  spqe.py  uccnppqe.py  uccnpqe.py  uccnvqe.py
tests/: test_blas.py  test_givens_kernels.cu  test_scale_kernels.cu
